# fabric-dynamics-erp-integration

./: .gitignore  AGENTS.md  COPILOT_PROMPTS.md  README.md  RESOURCE_INDEX.md  START_HERE.md  VERIFICATION.md
.github/: copilot-instructions.md
agent/: .env.example  README.md  azure.yaml  pyproject.toml
agent/scripts/: export_schemas.py  provision_prompt_agent.py
agent/src/: README.md  agent.yaml  main.py  requirements.txt
agent/src/manufacturing_quality_agent/: fixture_cli.py  fixture_service.py  models.py  rendering.py  routing.py  routing_cli.py  routing_io.py  settings.py
agent/src/manufacturing_quality_agent/integrations/: __init__.py  agent_factory.py  host.py
agent/src/manufacturing_quality_agent/prompts/: system.md
agent/tests/: test_contracts.py  test_models.py  test_rendering.py  test_robustness.py  test_routing.py
copilot-studio/: README.md
docs/: 00-design-decision.md  01-repository-review.md  02-target-architecture.md  03-activator-and-power-automate.md  04-copilot-studio-option.md  05-stakeholder-resolution.md  06-data-contracts.md  07-foundry-agent-design.md  08-fabric-data-agent-design.md  09-foundry-iq-toolbox.md  10-power-automate-flows.md  11-cowork-handoff.md  12-security-and-risks.md  13-implementation-plan-4-days.md  14-team-development-guide.md  15-demo-runbook.md  16-go-no-go.md  17-deployment-and-demo.md  18-operator-handoff.md  19-demo-flow-and-changes.md  REFERENCES.md  manufacturing-demo-notes.md  scenario-c-rti-demo.md
evals/: README.md  cases.jsonl
fabric-data-agent/: README.md  example-queries.yaml  instructions.md
(+78 files in other folders)
