[project]
name = "manufacturing-quality-agent"
version = "0.2.0"
description = "Microsoft Foundry Hosted Agent for manufacturing quality incidents"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
]

[project.optional-dependencies]
foundry = [
  "agent-framework-foundry",
  "agent-framework-foundry-hosting",
  "aiohttp",
  "azure-ai-projects>=2.0.0",
  "azure-identity",
  "httpx",
  "mcp>=1.24,<2",
]
dev = [
  "jsonschema>=4.23",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pyyaml>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
]

[project.scripts]
mq-agent-fixture = "manufacturing_quality_agent.fixture_cli:main"
mq-routing-check = "manufacturing_quality_agent.routing_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manufacturing_quality_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["manufacturing_quality_agent"]
